[gd_scene load_steps=25 format=3 uid="uid://ch2tirnvfumb0"]

[ext_resource type="Script" path="res://Scripts/Dino.gd" id="1_n3t16"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ow7mb"]
load_path = "res://.godot/imported/DinoSprites - doux.png-83909eb4ca1a8eba7c886d96bfd1e5e8.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_g381p"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgxqv"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlmty"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy6cu"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3c1"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_shki0"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qy2x"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_27bw8"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6qgk"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sndak"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjb8y"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oudp8"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkohi"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnber"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0leb"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(408, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlvbk"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ej8"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt3y3"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr4lt"]
atlas = SubResource("CompressedTexture2D_ow7mb")
region = Rect2(504, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_67mef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g381p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgxqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlmty")
}],
"loop": true,
"name": &"Hurting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy6cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shki0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qy2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27bw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6qgk")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sndak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjb8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oudp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkohi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnber")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0leb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlvbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ej8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt3y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr4lt")
}],
"loop": true,
"name": &"Running",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_43w54"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eockn"]
radius = 40.0

[node name="Dino" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_n3t16")

[node name="Animacao" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_67mef")
animation = &"Running"
autoplay = "Idle"

[node name="Colisao" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_43w54")

[node name="AreaDePercepcao" type="Area2D" parent="."]

[node name="ColisaoDaArea" type="CollisionShape2D" parent="AreaDePercepcao"]
shape = SubResource("CircleShape2D_eockn")

[connection signal="mouse_entered" from="AreaDePercepcao" to="." method="_quando_mouse_entrar_na_area_de_percepcao"]
[connection signal="mouse_exited" from="AreaDePercepcao" to="." method="_quando_mouse_sair_da_area_de_percepcao"]
